crates/pg_syntax/tests/snapshots/postgres_regress/subselect@165.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into exists_tbl select x, x/2, x+1 from generate_series(0,10) x;"
---
InsertStmt@0..71
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "exists_tbl"
  Whitespace@22..23 " "
  SelectStmt@23..70
    Select@23..29 "select"
    Whitespace@29..30 " "
    ResTarget@30..31
      ColumnRef@30..31
        Ident@30..31 "x"
    Ascii44@31..32 ","
    Whitespace@32..33 " "
    ResTarget@33..36
      AExpr@33..36
        ColumnRef@33..34
          Ident@33..34 "x"
        Ascii47@34..35 "/"
        AConst@35..36
          Iconst@35..36 "2"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    ResTarget@38..41
      AExpr@38..41
        ColumnRef@38..39
          Ident@38..39 "x"
        Ascii43@39..40 "+"
        AConst@40..41
          Iconst@40..41 "1"
    Whitespace@41..42 " "
    From@42..46 "from"
    Whitespace@46..47 " "
    RangeFunction@47..70
      List@47..67
        FuncCall@47..67
          Ident@47..62 "generate_series"
          Ascii40@62..63 "("
          AConst@63..64
            Iconst@63..64 "0"
          Ascii44@64..65 ","
          AConst@65..67
            Iconst@65..67 "10"
      Ascii41@67..68 ")"
      Whitespace@68..69 " "
      Alias@69..70
        Ident@69..70 "x"
  Ascii59@70..71 ";"

