crates/pg_syntax/tests/snapshots/postgres_regress/subselect@185.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select exists(select * from nocolumns);
---
SelectStmt@0..39
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..37
    SubLink@7..37
      SelectStmt@7..37
        Exists@7..13 "exists"
        Ascii40@13..14 "("
        Select@14..20 "select"
        Whitespace@20..21 " "
        ResTarget@21..22
          ColumnRef@21..22
            AStar@21..22
              Ascii42@21..22 "*"
        Whitespace@22..23 " "
        From@23..27 "from"
        Whitespace@27..28 " "
        RangeVar@28..37
          Ident@28..37 "nocolumns"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

