crates/pg_syntax/tests/snapshots/postgres_regress/subselect@197.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from\n  (select distinct ten from tenk1) ss\n  where ten < 10 + nextval('ts1')\n  order by 1;"
---
SelectStmt@0..99
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Newline@13..14 "\n"
  Whitespace@14..16 "  "
  Ascii40@16..17 "("
  RangeSubselect@17..51
    SelectStmt@17..47
      Select@17..23 "select"
      Whitespace@23..24 " "
      Distinct@24..32 "distinct"
      Whitespace@32..33 " "
      ResTarget@33..36
        ColumnRef@33..36
          Ident@33..36 "ten"
      Whitespace@36..37 " "
      From@37..41 "from"
      Whitespace@41..42 " "
      RangeVar@42..47
        Ident@42..47 "tenk1"
    Ascii41@47..48 ")"
    Whitespace@48..49 " "
    Alias@49..51
      Ident@49..51 "ss"
  Newline@51..52 "\n"
  Whitespace@52..54 "  "
  Where@54..59 "where"
  Whitespace@59..60 " "
  AExpr@60..84
    ColumnRef@60..63
      Ident@60..63 "ten"
    Whitespace@63..64 " "
    Ascii60@64..65 "<"
    Whitespace@65..66 " "
    AExpr@66..84
      AConst@66..68
        Iconst@66..68 "10"
      Whitespace@68..69 " "
      Ascii43@69..70 "+"
      Whitespace@70..71 " "
      FuncCall@71..84
        Ident@71..78 "nextval"
        Ascii40@78..79 "("
        AConst@79..84
          Sconst@79..84 "'ts1'"
  Ascii41@84..85 ")"
  Newline@85..86 "\n"
  Whitespace@86..88 "  "
  SortBy@88..98
    Order@88..93 "order"
    Whitespace@93..94 " "
    By@94..96 "by"
    Whitespace@96..97 " "
    AConst@97..98
      Iconst@97..98 "1"
  Ascii59@98..99 ";"

