crates/pg_syntax/tests/snapshots/postgres_regress/subselect@198.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select nextval('ts1');"
---
SelectStmt@0..22
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..20
    FuncCall@7..20
      Ident@7..14 "nextval"
      Ascii40@14..15 "("
      AConst@15..20
        Sconst@15..20 "'ts1'"
  Ascii41@20..21 ")"
  Ascii59@21..22 ";"

